Apps/Envoy/envoy-oidc-security.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-auth-policy
  namespace: kube-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble-route
  oidc:
    provider:
      issuer: "https://authentik.kublab.org/application/o/envoy-gateway/"
    clientID: "WQdGwEafDJMHx2X7azaWk7exGf7h5gEhQ9GVCGCa"
    clientSecret:
      name: envoy-oidc-secret
    scopes:
      - "openid"
      - "email"
      - "profile"
      - "groups"
      - "offline_access"
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: pyroscope-auth-policy
  namespace: pyroscope
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pyroscope-route
  oidc:
    provider:
      issuer: "https://authentik.kublab.org/application/o/envoy-gateway/"
    clientID: "WQdGwEafDJMHx2X7azaWk7exGf7h5gEhQ9GVCGCa"
    clientSecret:
      name: envoy-oidc-secret
    scopes:
      - "openid"
      - "email"
      - "profile"
      - "groups"
      - "offline_access"
