Apps/Envoy/extra-sec.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-app-route
  namespace: default
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "production.kublab.org"
  rules:
  - filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        # Forces browsers to only use HTTPS for the next year
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains; preload"
        # Prevents clickjacking
        - name: X-Frame-Options
          value: "DENY"
        # Prevents browsers from guessing content types
        - name: X-Content-Type-Options
          value: "nosniff"
        # Hides your referrer URLs from other websites
        - name: Referrer-Policy
          value: "strict-origin-when-cross-origin"
        remove:
        # Hide envoy header
        - "Server" 
    backendRefs:
    - name: my-app-service
      port: 80
