Apps/Envoy/routes.yaml
# -----------------------------
# Vault Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "vault.kublab.org"
  rules:
  - backendRefs:
    - name: vault
      port: 8200
---
# -----------------------------
# Hubble Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "hubble.kublab.org"
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
---
# -----------------------------
# Authentik Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-route
  namespace: authentik
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "authentik.kublab.org"
  rules:
  - backendRefs:
    - name: authentik-helm-release-server
      port: 80
---
# -----------------------------
# Grafana Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: grafana
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "grafana.kublab.org"
  rules:
  - backendRefs:
    - name: grafana
      port: 80
---
# -----------------------------
# ArgoCD Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "argocd.kublab.org"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
---
# -----------------------------
# Pyroscope Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pyroscope-route
  namespace: pyroscope
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "pyroscope.kublab.org"
  rules:
  - backendRefs:
    - name: pyroscope-query-frontend
      port: 4040
---
# -----------------------------
# RedPanda Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redpanda-route
  namespace: redpanda
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "redpanda.kublab.org"
  rules:
  - backendRefs:
    - name: redpanda-console
      port: 8080
---
# -----------------------------
# Kargo Routing
# -----------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo-route
  namespace: kargo
spec:
  parentRefs:
  - name: lab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames: 
  - "kargo.kublab.org"
  rules:
  - backendRefs:
    - name: kargo-api
      port: 80
---
# -----------------------------
# Rancher Routing
# -----------------------------
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: rancher-route
#  namespace: cattle-system
#spec:
#  parentRefs:
#  - name: lab-gateway
#    namespace: envoy-gateway-system
#    sectionName: https
#  hostnames: 
#  - "rancher.kublab.org"
#  rules:
#  - backendRefs:
#    - name: rancher
#      port: 80
